--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:41332",
-      //"sslPort": 44361
+      "applicationUrl": "http://localhost:41332"
+      "sslPort": 44361
     }
   },
   "profiles": {
